Upgrade from Java 17 to Java 21